--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -5,7 +5,7 @@ config :adoptoposs, Adoptoposs.Repo,
   username: "postgres",
   password: "postgres",
   database: "adoptoposs_dev",
-  hostname: "localhost",
+  hostname: "db",
   show_sensitive_data_on_connection_error: true,
   pool_size: 10
 
