--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.7"
 
 services:
-  web:
+  dev:
     build:
       context: .
-      target: ci
+      target: dev
     stdin_open: true
     tty: true
     command: ./bin/start_dev_server
