--- a/assets/package.json
+++ b/assets/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "postcss-loader": "^3.0.0",
-    "tailwindcss": "^1.2.0"
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -18,10 +16,13 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^2.1.1",
+    "file-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.0",
+    "tailwindcss": "^1.2.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
