--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -79,3 +79,7 @@ config :phoenix, :stacktrace_depth, 20
 
 # Initialize plugs at runtime for faster development compilation
 config :phoenix, :plug_init_mode, :runtime
+
+# Mailing
+config :adoptoposs, AdoptopossWeb.Mailer,
+  adapter: Bamboo.LocalAdapter
