Fix scheduler configs

--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -39,12 +39,12 @@ config :ueberauth, Ueberauth.Strategy.Github.OAuth,
 config :adoptoposs, :github_api, Adoptoposs.Network.Api.Github
 
 # # Job Scheduling
-# # For testing in dev the jobs are run every 5 sec and every 10 sec.
+# # For testing in dev the jobs are run every 5 sec.
 # # Please adjust the config to your needs.
 #
 # config :adoptoposs, Adoptoposs.Scheduler,
 #   jobs: [
-#     project_recommendations_weekly: [
+#     project_recommendations: [
 #       schedule: {:extended, "*/5 * * * * *"},
 #       task: {Adoptoposs.Jobs, :send_project_recommendations, []}
 #     ]
