Fix crontab entry for jobs and make configurable

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -12,5 +12,6 @@ config_vars_to_export=(
   LIVE_VIEW_SIGNING_SALT
   GITHUB_CLIENT_ID
   GITHUB_CLIENT_SECRET
+  CRONTAB_PROJECT_RECOMMENDATIONS
   EMAIL_WEEKDAY
 )
