--- a/assets/package.json
+++ b/assets/package.json
@@ -14,17 +14,17 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.1",
-    "file-loader": "^5.1.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "copy-webpack-plugin": "^5.0.0",
+    "css-loader": "^3.0.0",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.0.0",
+    "sass-loader": "^8.0.0",
     "tailwindcss": "^1.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "uglifyjs-webpack-plugin": "^2.0.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.0.0"
   }
 }
