Configure new relic for performance monitoring

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -15,4 +15,6 @@ config_vars_to_export=(
   CRONTAB_PROJECT_RECOMMENDATIONS
   EMAIL_WEEKDAY
   GA_MEASUREMENT_ID
+  NEW_RELIC_APP_NAME
+  NEW_RELIC_LICENSE_KEY
 )
