--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -95,6 +95,12 @@ config :phoenix, :stacktrace_depth, 20
 # Initialize plugs at runtime for faster development compilation
 config :phoenix, :plug_init_mode, :runtime
 
+# Basic Auth
+config :adoptoposs, :basic_auth,
+  realm: "Only Team members",
+  username: System.get_env("BASIC_AUTH_USER"),
+  password: System.get_env("BASIC_AUTH_PASSWORD")
+
 # Mailing
 config :adoptoposs, AdoptopossWeb.Mailer,
   adapter: Bamboo.LocalAdapter
