--- a/assets/package.json
+++ b/assets/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "mjml": "^4.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
