--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - db
 
   db:
-    image: "postgres:12.1-alpine"
+    image: "postgres:12.6-alpine" # as used in production deployment
     ports:
       - '54321:5432'
     volumes:
