--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,9 +2,9 @@ name: Elixir CI
 
 on:
   push:
-    branches: [ master, staging ]
+    branches: [ main, staging ]
   pull_request:
-    branches: [ master, staging ]
+    branches: [ main, staging ]
 
 jobs:
   build:
