--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
+    "deploy": "NODE_ENV=production webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
@@ -13,19 +13,22 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^6.0.0",
-    "css-loader": "^4.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.11.0",
-    "node-sass": "^4.14.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "is-svg": "^4.2.2",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^10.0.0",
-    "tailwindcss": "^1.7.0",
-    "uglifyjs-webpack-plugin": "^2.0.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^3.0.0"
+    "hard-source-webpack-plugin": "^0.13.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^8.2.9",
+    "postcss-import": "^14.0.1",
+    "postcss-loader": "^4.0.0",
+    "sass-loader": "^8.0.2",
+    "tailwindcss": "^2.1.1",
+    "terser-webpack-plugin": "^2.3.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.2"
   }
 }
