--- a/config/dev.exs.sample
+++ b/config/dev.exs.sample
@@ -25,7 +25,7 @@ config :adoptoposs, AdoptopossWeb.Endpoint,
       "node_modules/webpack/bin/webpack.js",
       "--mode",
       "development",
-      "--watch-stdin",
+      "--watch",
       cd: Path.expand("../assets", __DIR__)
     ]
   ]
