--- a/assets/package.json
+++ b/assets/package.json
@@ -20,7 +20,7 @@
     "file-loader": "^6.0.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.49.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
