--- a/assets/package.json
+++ b/assets/package.json
@@ -1,6 +1,9 @@
 {
   "repository": {},
   "license": "MIT",
+  "scripts": {
+    "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
+  },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
