Add npm and GitHub actions to dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,21 @@
 
 version: 2
 updates:
+
+  # Maintain dependencies for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+
+  # Maintain dependencies for hex
   - package-ecosystem: "mix"
     directory: "/"
+    schedule:
+      interval: "weekly"
+
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm"
+    directory: "/assets"
     schedule:
       interval: "weekly"
