--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -13,8 +13,7 @@ jobs:
 
       steps:
         - uses: actions/checkout@v3
-        - uses: superfly/flyctl-actions@1.3
+        - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: flyctl deploy --remote-only
           env:
             FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-          with:
-            args: "deploy"
