Fix docker dev environment to use current host user id & group
in order to be able to use generators without having the generated
files being owned by the root user from the docker environment.
(I.e. you are able to edit them in your text editor)

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,13 @@
 services:
-  dev:
+  app:
     build:
       context: .
-      target: dev
-      dockerfile: Dockerfile-dev
+      target: dev-build
+      dockerfile: Dockerfile.dev
+      args:
+        USER: docker
+        UID: 1000
+        GID: 1000
     stdin_open: true
     tty: true
     command: mix phx.server
