--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -49,16 +50,18 @@ jobs:
     - name: Run tests
       run: make test
 
-  deploy-develop:
+  staging:
     needs: test
     if: (github.ref == 'refs/heads/develop') || (github.ref == 'refs/heads/testing')
-    uses: ./.github/workflows/deployment-staging.yaml
+    uses: ./.github/workflows/cd-staging.yaml
     secrets:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      HONEYBADGER_API_KEY: ${{ secrets.HONEYBADGER_API_KEY }}
 
-  deploy-main:
+  production:
     needs: test
     if: github.ref == 'refs/heads/main'
-    uses: ./.github/workflows/deployment-production.yaml
+    uses: ./.github/workflows/cd-production.yaml
     secrets:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      HONEYBADGER_API_KEY: ${{ secrets.HONEYBADGER_API_KEY }}
