--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "esbuild-sass-plugin": "^2.9.0",
     "autoprefixer": "^10.4.14",
     "chokidar": "^3.5.3",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.2",
     "topbar": "^2.0.1"
