--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,20 @@
-ARG ELIXIR_VERSION=1.14.3
-ARG OTP_VERSION=25.3
-ARG DEBIAN_VERSION=bullseye-20230227-slim
+# Find eligible builder and runner images on Docker Hub. We use Debian instead of
+# Alpine to avoid DNS resolution issues in production.
+#
+# https://hub.docker.com/r/hexpm/elixir/tags?page=1&name=debian
+# https://hub.docker.com/_/debian?tab=tags
+#
+#
+# This file is based on these images:
+#
+#   - https://hub.docker.com/r/hexpm/elixir/tags - for the build image
+#   - https://hub.docker.com/_/debian?tab=tags&page=1&name=buster-20230612-slim - for the release image
+#   - https://pkgs.org/ - resource for finding needed packages
+#   - Ex: hexpm/elixir:1.15.6-erlang-26.1-debian-buster-20230612-slim
+#
+ARG ELIXIR_VERSION=1.15.6
+ARG OTP_VERSION=26.1
+ARG DEBIAN_VERSION=buster-20230612-slim
 
 ARG BUILDER_IMAGE="hexpm/elixir:${ELIXIR_VERSION}-erlang-${OTP_VERSION}-debian-${DEBIAN_VERSION}"
 FROM ${BUILDER_IMAGE} as dev-build
