--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,24 +8,24 @@
 # This file is based on these images:
 #
 #   - https://hub.docker.com/r/hexpm/elixir/tags - for the build image
-#   - https://hub.docker.com/_/debian?tab=tags&page=1&name=bookworm-20231009-slim - for the release image
+#   - https://hub.docker.com/_/debian?tab=tags&page=1&name=bookworm-20240130-slim - for the release image
 #   - https://pkgs.org/ - resource for finding needed packages
-#   - Ex: hexpm/elixir:1.15.7-erlang-26.2-debian-bookworm-20231009-slim
+#   - Ex: hexpm/elixir:1.16.1-erlang-25.3.2.9-debian-bookworm-20240130-slim
 #
-ARG ELIXIR_VERSION=1.15.7
-ARG OTP_VERSION=26.2
-ARG DEBIAN_VERSION=bookworm-20231009-slim
+ARG ELIXIR_VERSION=1.16.1
+ARG OTP_VERSION=25.3.2.9
+ARG DEBIAN_VERSION=bookworm-20240130-slim
 
 ARG BUILDER_IMAGE="hexpm/elixir:${ELIXIR_VERSION}-erlang-${OTP_VERSION}-debian-${DEBIAN_VERSION}"
 FROM ${BUILDER_IMAGE} as dev-build
 
 # install build dependencies
-RUN apt-get update -y && apt-get install -y build-essential curl git inotify-tools \
+RUN apt-get update -y && apt-get install -y build-essential curl git inotify-tools ca-certificates \
   && apt-get clean && rm -f /var/lib/apt/lists/*_*
 
 # install nodejs
 # See https://github.com/nodesource/distributions#installation-instructions
-RUN apt-get install -y ca-certificates curl gnupg \
+RUN apt-get install -y curl gnupg \
   && mkdir -p /etc/apt/keyrings \
   && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
 
