--- a/assets/package.json
+++ b/assets/package.json
@@ -10,11 +10,12 @@
     "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
-    "esbuild": "^0.25.1",
-    "esbuild-sass-plugin": "^3.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@tailwindcss/postcss": "^4.0.15",
     "autoprefixer": "^10.4.20",
     "chokidar": "^4.0.3",
-    "@fortawesome/fontawesome-free": "^6.7.2",
+    "esbuild": "^0.25.1",
+    "esbuild-sass-plugin": "^3.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
     "topbar": "^3.0.0"
